--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,14 @@ html, body {
     width: 100%;
     height: 100%;
 }
+.textCenter{
+    text-align: center;
+}
+.pt15{
+    padding-top: 15px;
+}
+.pt5{
+    padding-top: 5px;
+}
+
+
