--- a/src/component/merchant/index.module.scss
+++ b/src/component/merchant/index.module.scss
@@ -16,11 +16,21 @@
         }
     }
 }
+.posMain{
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
 .merchantMain{
     
 }
 .TabGroup{
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    :global{
+        .ant-radio-button-wrapper{
+            font-size: 12px;
+        }
+    }
 }
 .summaryTable{
     width: 100%;
@@ -29,6 +39,7 @@
     padding: 5px;
     border-radius: 10px;
     font-size: 12px;
+    box-shadow: 0 0 10px rgba($color: #666, $alpha: .2);
     .summaryTitle{
         background: #f2f2f2;
         margin-bottom: 5px;
@@ -37,4 +48,68 @@
         font-size: 16px;
         font-weight: bold;
     }
+    :global{
+        .ant-table-cell{
+            color: #333;
+        }
+    }
 }
+.DetailMain{
+    width: 100%;
+    height: 100%;
+    background: rgba($color: #FFF, $alpha: 1);
+    box-shadow: 0 0 10px rgba($color: #666, $alpha: .2);
+    border-radius: 10px;
+    position: absolute;
+    z-index: 10;
+    transition: .5s ease-in-out;
+    transform: translatex(120%);
+    top: 0;
+    left: 0;
+    .DetailScroll{
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        overflow: auto;
+        overflow-x: hidden;
+    }
+}
+.DetailMain.show{
+    transform: translatex(0);
+}
+.closeDetail{
+    position: absolute;
+    top: -5px;
+    right: -5px;
+}
+.row{
+    width: 100%;
+}
+.page_header{
+    width:100%;
+    height: 30px;
+    border-bottom: 1px solid #eee;
+    font-size: 18px;
+    line-height: 25px;
+    padding-bottom: 5px;
+    .date{
+        float: right;
+        font-size: 12px;
+        color: #999;
+    }
+}
+.detailInfoBox{
+    display: flex;
+    flex-direction: row;
+    padding-top: 20px;
+    justify-content: space-between;
+    .detailInfo{
+        width: 30%;
+        font-size: 13px;
+        color: #333;
+    }
+}
+.detailTransactionTable{
+    margin-top: 20px;
+}
+
