--- a/src/component/merchant/index.module.scss
+++ b/src/component/merchant/index.module.scss
@@ -111,5 +111,23 @@
 }
 .detailTransactionTable{
     margin-top: 20px;
+    .netSum{
+        margin-top: 20px;
+        margin-bottom: 10px;
+        font-weight: bold;
+    }
+    .explain{
+        width: 220px;
+        float: left;
+        font-size: 12px;
+        color: #777;
+        p{
+            background-color: #f5f5f5;
+            border: 1px solid #e3e3e3; 
+            border-radius: 3px;
+            min-height: 20px;
+            padding: 8px;
+        }
+    }
 }
 
