新增重复接口cancel 功能

--- a/src/component/merchant/index.module.scss
+++ b/src/component/merchant/index.module.scss
@@ -28,7 +28,8 @@
     margin-bottom: 20px;
     :global{
         .ant-radio-button-wrapper{
-            font-size: 12px;
+            font-size: 14px;
+            font-weight: 300;
         }
     }
 }
