fixed some bugs

--- a/src/component/merchant/index.module.scss
+++ b/src/component/merchant/index.module.scss
@@ -165,4 +165,10 @@
         }    
     }
 }
+.elavon_tip{
+    font-size: 14px;
+    color: #444;
+    padding-top: 10px;
+    font-weight: 300;
+}
 
